FIX atlas-run